--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -1,3 +1,5 @@
+name: mclogs
+
 services:
   nginx:
     image: nginx:latest
@@ -11,7 +13,7 @@ services:
   php-fpm:
     build:
       dockerfile_inline: |
-        FROM php:8.4-fpm
+        FROM php:8.1-fpm
         COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/local/bin/
         RUN install-php-extensions mongodb
         COPY mclogs.ini /usr/local/etc/php/conf.d/mclogs.ini
