more changes I guess

--- a/docker/mclogs.conf
+++ b/docker/mclogs.conf
@@ -2,13 +2,21 @@ server {
     listen 80;
     sendfile off;
 
-    server_name localhost;
+    access_log off;
+
+    server_name paste.cloudykingdom.com;
 
     root /web/mclogs/web/public;
 
     error_log /var/log/nginx/mclogs-error.log error;
 
     client_max_body_size 210m;
+
+    location ~* \.(?:woff2|woff|ttf|eot|otf)$ {
+        add_header Access-Control-Allow-Origin *;
+        add_header Content-Type font/woff2;
+        expires max;
+    }
 
     location / {
         try_files $uri /index.php;
@@ -29,7 +37,9 @@ server {
     listen 80;
     sendfile off;
 
-    server_name api.localhost;
+    access_log off;
+
+    server_name apipaste.cloudykingdom.com;
 
     root /web/mclogs/api/public;
 
