--- a/docker/mclogs.conf
+++ b/docker/mclogs.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     sendfile off;
 
-    server_name localhost;
+    server_name paste.cloudykingdom.com;
 
     root /web/mclogs/web/public;
 
@@ -29,7 +29,7 @@ server {
     listen 80;
     sendfile off;
 
-    server_name api.localhost;
+    server_name apipaste.cloudykingdom.com;
 
     root /web/mclogs/api/public;
 
