--- a/docker/mclogs.conf
+++ b/docker/mclogs.conf
@@ -51,3 +51,14 @@ server {
         include fastcgi_params;
     }
 }
+
+server {
+    listen 80;
+    server_name _;  # Catch-all for debugging
+    sendfile off;
+
+    location / {
+        return 200 "Host: $host\nServer Name: $server_name\nHttp Host: $http_host\n";
+        add_header Content-Type text/plain;
+    }
+}
