change the defaults

--- a/docker/mclogs.conf
+++ b/docker/mclogs.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     sendfile off;
 
-    server_name paste.cloudykingdom.com;
+    server_name CHANGETHISTOYOURDOMAIN;
 
     root /web/mclogs/web/public;
 
@@ -29,7 +29,7 @@ server {
     listen 80;
     sendfile off;
 
-    server_name apipaste.cloudykingdom.com;
+    server_name api.CHANGETHISTOYOURDOMAIN;
 
     root /web/mclogs/api/public;
 
@@ -49,16 +49,5 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
 
         include fastcgi_params;
-    }
-}
-
-server {
-    listen 80;
-    server_name _;  # Catch-all for debugging
-    sendfile off;
-
-    location / {
-        return 200 "Host: $host\nServer Name: $server_name\nHttp Host: $http_host\n";
-        add_header Content-Type text/plain;
     }
 }
