add yolk branch
change things needed

--- a/docker/mclogs.conf
+++ b/docker/mclogs.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     sendfile off;
 
-    server_name localhost;
+    server_name YOURDOMAIN;
 
     root /web/mclogs/web/public;
 
@@ -16,7 +16,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-fpm:9000;
+        fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
 
         fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
@@ -29,7 +29,7 @@ server {
     listen 80;
     sendfile off;
 
-    server_name api.localhost;
+    server_name api.YOURDOMAIN;
 
     root /web/mclogs/api/public;
 
@@ -43,7 +43,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php-fpm:9000;
+        fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
 
         fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
