self host the fonts and CSS for the API page
hot take, less external site calls for your front page = better

--- a/docker/mclogs.conf
+++ b/docker/mclogs.conf
@@ -10,6 +10,12 @@ server {
 
     client_max_body_size 210m;
 
+    location ~* \.(?:woff2|woff|ttf|eot|otf)$ {
+        add_header Access-Control-Allow-Origin *;
+        add_header Content-Type font/woff2;
+        expires max;
+    }
+
     location / {
         try_files $uri /index.php;
     }
